--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@types/express": "^5.0.0",
     "axios": "^1.7.8",
     "express": "^4.21.1"
   }
