--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,13 @@
   "dependencies": {
     "@types/express": "^5.0.0",
     "axios": "^1.7.8",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
-    "express": "^4.21.1"
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
+    "express-rate-limit": "^7.4.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.8.3",
+    "mongoose-unique-validator": "^4.0.1"
   }
 }
