--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,8 @@
   "module": "index.ts",
   "type": "module",
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "tsd": "^0.31.2"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
